--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: WCtag
 Type: Package
-Title: R Tools for Wildlife Computers Tags
+Title: Tools for Wildlife Computers Animal Tracking Tags. 
 Version: 0.0-1
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"),
     email = "mdsumner@gmail.com"))
